--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -53,11 +53,11 @@ layout: compress
             {% if site.siteNav %}
                 <div class="text-base flex-grow text-right pb-1 lg:pb-0">
                     <!-- Home link only on lg -->
-                    <a href="{{ site.baseurl }}/" rel="noopener" class="hidden lg:block lg:inline-block {% if page.navname == "Home" %}text-white{% else %}text-teal-200 hover:text-white{% endif %} mr-4">
+                    <a href="{{ site.baseurl }}/" rel="noopener" class="hidden lg:block lg:inline-block {% if page.navname == "Home" %}text-white{% else %}text-yellow-300 hover:text-white{% endif %} mr-4">
                         Home
                     </a>
                     {% for nlink in site.siteNav %}
-                        <a href="{{ site.baseurl }}/{{ nlink.url }}" rel="noopener" {% if nlink.newtab == true %}target="_blank" {% endif %}class="block inline-block {% if page.navname == nlink.name %}text-white{% else %}text-teal-200 hover:text-white{% endif %} mr-4">
+                        <a href="{{ site.baseurl }}/{{ nlink.url }}" rel="noopener" {% if nlink.newtab == true %}target="_blank" {% endif %}class="block inline-block {% if page.navname == nlink.name %}text-white{% else %}text-yellow-300 hover:text-white{% endif %} mr-4">
                             {{ nlink.name }}
                         </a>
                     {% endfor %}
